Fix Bug: Hero unresponsive on mobile

--- a/src/pages/styles/home.scss
+++ b/src/pages/styles/home.scss
@@ -91,7 +91,7 @@
     .hero__sub--large {
       font-family: "Monda";
       font-weight: 700;
-      font-size: clamp(25px, 3vw, 60px);
+      font-size: clamp(23px, 3vw, 60px);
     }
 
     .hero__name {
@@ -105,7 +105,7 @@
       .hero__name--letter {
         font-family: "Monda";
         font-weight: 700;
-        font-size: clamp(35px, 5vw, 80px);
+        font-size: clamp(30px, 5vw, 80px);
 
         display: inline-block;
         
